k8/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:  
      - name: backend
        image: pradeep34946/backend:v3
        ports:
        - containerPort: 5000
