k8/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:  
      - name: mysql
        image: pradeep34946/mysql:v1
        ports:
          - containerPort: 3306
