k8/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: backend
  type: Loadbalancer
