k8/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-service
spec:
  ports:
    - name: http
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
  type: ClusterIP
