k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: frontend-service
          #       port:
          #         number: 3000
           
          # - path: /api/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend-service
          #       port:
          #         number: 5000

          - path: /WeatherForecast
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
